IGNITE-25489 Structure XML fields and generate message table during Maven build